[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saboteur-engine-victor"
version = "0.0.1"
authors = [
  { name="victor", email="erthalv22@gmail.com" },
]
description = "Engine de logica para o jogo Saboteur - Trabalho Faculdade"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SEU_USUARIO/NOME_DO_REPO"